addded connection count and updated at in pagesource and pagedestination API (#648)
