# airbyte-api/src/main/openapi/config.yaml
@@ -634,7 +634,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/SourcePageReadList"
+                $ref: "#/components/schemas/PageSourceReadList"
         "404":
           $ref: "#/components/responses/NotFoundResponse"
         "422":
@@ -1200,7 +1200,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/DestinationPageReadList"
+                $ref: "#/components/schemas/PageDestinationReadList"
         "404":
           $ref: "#/components/responses/NotFoundResponse"
         "422":
@@ -3130,6 +3130,17 @@ components:
           type: string
         sourceName:
           type: string
+    PageSourceRead:
+      type: object
+      required:
+        - sourceRead
+      properties:
+        sourceRead:
+          $ref: "#/components/schemas/SourceRead"
+        connectionCount:
+          type: integer
+        updatedAt:
+          type: string
     SourceReadWithConnectionPage:
       type: object
       required:
@@ -3474,6 +3485,17 @@ components:
           type: string
         destinationName:
           type: string
+    PageDestinationRead:
+      type: object
+      required:
+        - destinationRead
+      properties:
+        destinationRead:
+          $ref: "#/components/schemas/DestinationRead"
+        connectionCount:
+          type: integer
+        updatedAt:
+          type: string
     DestinationReadWithConnectionPage:
       type: object
       required:
@@ -3499,7 +3521,7 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/DestinationRead"
-    DestinationPageReadList:
+    PageDestinationReadList:
       type: object
       required:
         - destinations
@@ -3507,7 +3529,7 @@ components:
         destinations:
           type: array
           items:
-            $ref: "#/components/schemas/DestinationRead"
+            $ref: "#/components/schemas/PageDestinationRead"
         total:
           type: integer
           format: int64
@@ -5215,7 +5237,7 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/WebBackendConnectionStatusRead"
-    SourcePageReadList:
+    PageSourceReadList:
       type: object
       required:
         - sources
@@ -5223,7 +5245,7 @@ components:
         sources:
           type: array
           items:
-            $ref: "#/components/schemas/SourceRead"
+            $ref: "#/components/schemas/PageSourceRead"
         total:
           type: integer
           format: int64
